# festo-codesys-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  claude_desktop_config.json  eslint.config.mjs  package-lock.json  package.json  server.json  tsconfig.json
.claude/: settings.json  statusline.mjs
.claude/agents/: plc-reviewer.md  xml-validator.md
.claude/commands/: audit-naming.md  cycle-test.md  daily-warmup.md  error-decode.md  fb-from-library.md  import-checklist.md  start-fb.md  (+1 more)
.github/: ci.yml
data/: fb-interface-patterns.json  festo-error-codes.json  hungarian-prefixes.json  state-machine-states.json  type-prefixes.json
docs/: v3-integration.md
knowledge/: INDEX.md
python/: pyproject.toml
python/lib/plcopen_validation/: __init__.py  semantic_gate.py  types.py  xsd_gate.py
python/lib/plcopen_validation/data/: tc6_xml_v200_patched.xsd
python/tests/: conftest.py  test_semantic_gate.py  test_xsd_gate.py
python/tests/fixtures/: synthetic-project-valid.xml
python/wrappers/: _common.py  cpx_discover.py  cpx_read_channel.py  cpx_system_state.py  cpx_write_channel.py  edcon_drive_control.py  edcon_pnu.py  edcon_position.py  edcon_referencing.py  validate_plcopen_semantic.py  validate_plcopen_xsd.py
scripts/: bench.mjs  discover-codesys-profile.mjs  e2e-codesys.mjs  e2e-cpx.mjs  e2e-edcon.mjs  extract-chm.mjs  extract-festo-package.mjs  gen-synthetic-fixture.mjs  parse-codesys-errors-ini.mjs  parse-devdesc-xml.mjs  parse-esi-cia402.mjs
src/: index.ts  server-instructions.ts
(+139 files in other folders)
