[project]
name = "festo-codesys-mcp-wrappers"
version = "1.0.0"
description = "Python wrapper scripts invoked by FestoCodesysMCP via child_process"
requires-python = ">=3.10"
dependencies = [
    "festo-cpx-io>=0.11.2,<0.12",
    "festo-edcon>=1.0.0,<2.0",
    "lxml>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
